 - Optimised AddMenuIcon (the disabled image-list isn't recreated unnecessarily).
 - Added UseStatusBar option for OnCreate.
 - Relaxed restrictions on size of images for menu icons. This provides better 
    support for larger screen scaling available on windows 10 for DPI aware apps. 


Changes in detail
-----------------
Added CBitmap::ConvertToDisabled                 member function
Added CFrameT::AddDisabledMenuImage              member function
Added CFrameT::IsUsingStatusBar                  member function
Added CFrameT::UseStatusBar                      member function
Added CImageList::Copy
Added CImageList::GetBkColor
Added CImageList::GetDragImage
Added CImageList::EndDrag
Added CImageList::ExtractIcon
Added CImageList::Read
Added CImageList::SetBkColor
Added CImageList::SetDragCursorImage
Added CImageLIst::Write

Modified CFrameT::AddMenuIcon                    added optional iconWidth argument

Renamed CFrameT::GetUseIndicatorStatus    to     CFrameT::IsUsingIndicatorStatus
Renamed CFrameT::GetUseMenuStatus         to     CFrameT::IsUsingMenuStatus
Renamed CFrameT::GetUseReBar              to     CFrameT::IsUsingReBar
Renamed CFrameT::GetUseThemes             to     CFrameT::IsUsingThemes
Renamed CFrameT::GetUseToolBar            to     CFrameT::IsUsingToolBar
Renamed CFrameT::SetUseIndicatorStatus    to     CFrameT::UseIndicatorStatus
Renamed CFrameT::SetUseMenuStatus         to     CFrameT::UseMenuStatus
Renamed CFrameT::SetUseReBar              to     CFrameT::UseReBar
Renamed CFrameT::SetUseThemes             to     CFrameT::UseThemes
Renamed CFrameT::SetUseToolBar            to     CFrameT::UseToolBar



Version 8.5
===========

New Features and Enhancements
-----------------------------
* Added CFileFind class
  The CFileFind provides a means of finding one or more files that match
  a search string. Information can be extracted from each file found.
  
* Added CFolderDialog class