@@ -15,6 +15,8 @@ New Features and Enhancements
 Changes in detail
 -----------------
 Added CBitmap::ConvertToDisabled                 member function
+Added CComboBox::GetEditCtrl                     member function
+Added CComboBox::GetLBCtrl                       member function
 Added CFrameT::AddDisabledMenuImage              member function
 Added CFrameT::IsUsingStatusBar                  member function
 Added CFrameT::UseStatusBar                      member function
